--- a/app/views/users/analysis_partials/_stacked_columnchart.html.erb
+++ b/app/views/users/analysis_partials/_stacked_columnchart.html.erb
@@ -29,12 +29,12 @@
       var averageColumnChart = $('#average-columnchart div')[0],
           averageColumnChartArray = getAverageColumnChartArray(dataHash);
 
-      makeaverageColumnChart(averageColumnChartArray, averageColumnChart);
+      makeAverageColumnChart(averageColumnChartArray, averageColumnChart);
 
   });
 
 
-  function makeaverageColumnChart(weekArray, chartEl) {
+  function makeAverageColumnChart(weekArray, chartEl) {
     var data = google.visualization.arrayToDataTable(weekArray),
         options = {
           width: 600,
@@ -128,5 +128,30 @@
         dayNameArray = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
     return dayNameArray[day];
   }
+
+  function formatDate(date){
+      var dd = date.getDate();
+      var mm = date.getMonth()+1;
+      var yyyy = date.getFullYear();
+      if(dd < 10) {
+        dd = '0' + dd
+      }
+      if(mm < 10) {
+        mm = '0' + mm
+      }
+      date = yyyy + '-' + mm + '-' + dd;
+      return date;
+   }
+
+  function getLast7Days(){
+    var result = [];
+    for (var i=0; i<7; i++) {
+        var d = new Date();
+        d.setDate(d.getDate() - i);
+        result.push( formatDate(d) )
+    }
+
+    return result;
+  } 
 
 </script>
