--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,6 +1,7 @@
 
 <h1>Settings</h1>
 
+
 <%if session[:user_id]%>
   <!-- Greeting -->
   <%@users.each do |user|%>
@@ -31,3 +32,14 @@
   <!-- sign up button -->
   <a href="/users/new">Sign up</a>
 <%end%>
+
+
+<h3>About Timekeep</h3>
+<p>
+  Timekeep is a web app that helps you track how you spend your time. It is primarily a mobile web app because in this day and age, everyone is always on their phones. Periodically note what you've done in the past hour or two, and be honest: how much of that time did you spend surfing the web? Be honest and write that down in Timekeep. As you use Timekeep more and more, you'll become more mindful of your time-spending habits and become more aware when you are goofing off. Time is money; track your spending.
+</p>
+
+<p>
+  Timekeep was made by Adrian Mh Lin as a personal project because he could not find any app out there that did what he needed it to do. Adrian Mh Lin is a web developer, UX designer, and linguist. In his free time Adrian likes making web apps and improving life's user experience.
+</p>
+
