ORGANISATION: removed useless partials: log in, log out

--- a/app/views/users/analysis.html.erb
+++ b/app/views/users/analysis.html.erb
@@ -1,4 +1,8 @@
+<!-- category navbar -->
+<%= render 'users/analysis_partials/navbar/category' %>
 
+<!-- time period navbar -->
+<%= render 'users/analysis_partials/navbar/time_period' %>
 
 
 <!-- <div id="chart_div"></div>
@@ -9,11 +13,11 @@
  
 
   <section id="data-stacked-barchart">
-    <%= render 'users/analysis_partials/stacked_columnchart' %>
+    <%= render 'users/analysis_partials/charts/columnchart' %>
   </section>
 
   <section id="data-donutchart">
-    <%= render 'users/analysis_partials/donutchart' %>
+    <%= render 'users/analysis_partials/charts/donutchart' %>
   </section>
 
 
