--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
 
 
   <!-- converts ruby object to JSON -->
-  <!-- IMPORTANT -->
   <%= javascript_tag "var dataHash = #{@data_hash.to_json}" %>
 
 
@@ -40,7 +39,7 @@
 
   <script>
     $(document).ready(function(){
-      
+      //Anything go in here?
 
     });
 
