PERIOD-BAR: created. also document.ready on click for these buttons

--- a/app/views/home/_topbar.html.erb
+++ b/app/views/home/_topbar.html.erb
@@ -1,8 +1,7 @@
 <style>
-  #topbar {
-  }
+  #topbar .toggle{font-size:8vw;}  
 
-  #topbar .toggle {
+  .toggle {
     width:33vw;
     margin:0.1vw;
 /*    width:12vw;
@@ -10,7 +9,6 @@
     float:left;
     margin-left:16.5vw;
     margin-top:1.5vw;*/
-    font-size:8vw;
   }
   .toggle a {
     width:100%;
@@ -42,9 +40,9 @@
 </nav>
 
 
-
+<!-- 
 <script>
   $(document).ready(function(){
 
   });
-</script>
+</script> -->
